--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -24,13 +24,37 @@
             android:layout_width="1580dp"
             android:layout_height="980dp"
             />
-
+        <TextView
+            android:id="@+id/bilici"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="60dp"
+            android:layout_above="@+id/imageView"
+            android:text="@string/text"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:background="@null"
+            android:textColor="#000000"
+            android:layout_marginBottom="50dp"/>
+        <ImageView
+            android:id="@id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="10dp"
+            android:background="@mipmap/biliechi"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="40dp"
+            android:contentDescription="@string/text" />
         <RelativeLayout
             android:id="@+id/map_right_Ralative"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@null"
             android:layout_alignParentRight="true">
+
             <ImageView
                 android:id="@+id/imgViewmapnRight"
                 android:layout_width="53dp"
@@ -72,6 +96,11 @@
                         style="@style/MapButton"
                         android:id="@+id/button_return"
                         android:text="@string/button_return"
+                        />
+                    <Button
+                        style="@style/MapButton"
+                        android:id="@+id/button_setreturn"
+                        android:text="@string/button_setreturn"
                         />
                 </LinearLayout>
                 <LinearLayout
@@ -159,6 +188,29 @@
                     <!--android:visibility="gone"-->
                     <!--style="@style/MapButton"-->
                     <!--/>-->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/point_x"
+                            android:layout_weight="1"
+                            android:inputType="numberDecimal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            />
+                        <EditText
+                            android:id="@+id/point_y"
+                            android:layout_weight="1"
+                            android:inputType="numberDecimal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <Button
+                        android:id="@+id/button_choose"
+                        android:text="@string/button_choose"
+                        style="@style/MapButton"
+                        />
                     <Button
                         android:id="@+id/button_clearlast"
                         android:text="@string/button_clearlast"
@@ -196,6 +248,29 @@
                     <Button
                         android:id="@+id/button_next"
                         android:text="@string/savenext"
+                        style="@style/MapButton"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/go_point_x"
+                            android:layout_weight="1"
+                            android:inputType="numberDecimal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            />
+                        <EditText
+                            android:id="@+id/go_point_y"
+                            android:layout_weight="1"
+                            android:inputType="numberDecimal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <Button
+                        android:id="@+id/go_button_choose"
+                        android:text="@string/button_choose"
                         style="@style/MapButton"
                         />
                     <!--<EditText-->
