--- a/HeadControl/app/src/main/res/layout/item_spinselect.xml
+++ b/HeadControl/app/src/main/res/layout/item_spinselect.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="60dp"
     android:layout_width="200dp"
-    android:textColor="@color/black"
+    android:textColor="@color/white"
     android:textSize="27sp"
     android:gravity="center"/>
