--- a/HeadControl/app/src/main/res/values/styles.xml
+++ b/HeadControl/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
         <item name="android:layout_width">232dp</item>
         <item name="android:layout_height">96dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">26sp</item>
     </style>
     <style name="Dialog" parent="android:style/Theme.Dialog">
