--- a/HeadControl/app/src/main/res/layout-xlarge/activity_welcome.xml
+++ b/HeadControl/app/src/main/res/layout-xlarge/activity_welcome.xml
@@ -20,8 +20,9 @@
             android:id="@+id/ll_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="150dp"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_left"
@@ -75,7 +76,8 @@
                     android:name="com.android.jdrd.headcontrol.fragment.TitleListFragment"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    tools:layout="@layout/fragment_title" />
+                    tools:layout="@layout/fragment_title"
+                    />
 
                 <ImageView
                     android:id="@+id/imgViewBtnLift"
