--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -21,8 +21,9 @@
         android:orientation="horizontal">
         <com.android.jdrd.headcontrol.view.MyView
             android:id="@+id/surfaceview"
-            android:layout_width="1580dp"
-            android:layout_height="980dp"
+            android:layout_centerInParent="true"
+            android:layout_width="1800dp"
+            android:layout_height="900dp"
             />
         <TextView
             android:id="@+id/bilici"
@@ -37,17 +38,17 @@
             android:textSize="24sp"
             android:background="@null"
             android:textColor="#000000"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="10dp"/>
         <ImageView
             android:id="@id/imageView"
-            android:layout_width="50dp"
+            android:layout_width="90dp"
             android:layout_height="10dp"
             android:background="@mipmap/biliechi"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="60dp"
-            android:layout_marginBottom="40dp"
-            android:contentDescription="@string/text" />
+            android:layout_marginBottom="5dp"
+            />
         <RelativeLayout
             android:id="@+id/map_right_Ralative"
             android:layout_width="wrap_content"
@@ -92,11 +93,11 @@
                         android:id="@+id/button_cruise"
                         android:text="@string/button_cruise"
                         />
-                    <Button
-                        style="@style/MapButton"
-                        android:id="@+id/button_return"
-                        android:text="@string/button_return"
-                        />
+                    <!--<Button-->
+                        <!--style="@style/MapButton"-->
+                        <!--android:id="@+id/button_return"-->
+                        <!--android:text="@string/button_return"-->
+                        <!--/>-->
                     <Button
                         style="@style/MapButton"
                         android:id="@+id/button_setreturn"
@@ -191,20 +192,20 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="96dp">
                         <EditText
                             android:id="@+id/point_x"
                             android:layout_weight="1"
                             android:inputType="numberDecimal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             />
                         <EditText
                             android:id="@+id/point_y"
                             android:layout_weight="1"
                             android:inputType="numberDecimal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="match_parent" />
                     </LinearLayout>
                     <Button
                         android:id="@+id/button_choose"
@@ -253,20 +254,20 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="96dp">
                         <EditText
                             android:id="@+id/go_point_x"
                             android:layout_weight="1"
                             android:inputType="numberDecimal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             />
                         <EditText
                             android:id="@+id/go_point_y"
                             android:layout_weight="1"
                             android:inputType="numberDecimal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="match_parent" />
                     </LinearLayout>
                     <Button
                         android:id="@+id/go_button_choose"
