--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -27,13 +27,13 @@
             />
         <TextView
             android:id="@+id/bilici"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="60dp"
             android:layout_above="@+id/imageView"
-            android:text="@string/text"
+            android:text="@string/bilici"
             android:gravity="center"
             android:textSize="24sp"
             android:background="@null"
@@ -121,6 +121,16 @@
                         android:id="@+id/spinner_plan"
                         style="@style/MySpiner"
                         />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/MyTextView"
+                        android:textColor="#E8E8E8"
+                        android:text="@string/button_scale"/>
+                    <Spinner
+                        android:id="@+id/spinner_Scale"
+                        style="@style/MySpiner"
+                        />
                     <Button
                         style="@style/MapButton"
                         android:id="@+id/button_execut"
@@ -141,6 +151,7 @@
                         android:text="@string/button_remove"
                         style="@style/MapButton"
                         />
+
                     <Button
                         android:id="@+id/button_plan_back"
                         android:text="@string/back"
