--- a/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -70,52 +70,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="vertical">
                         <!--android:layout_width="300dp"
                             android:layout_height="100dp" -->
                         <ImageView
                             android:id="@+id/iv_Battery_Power"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+
                             android:src="@mipmap/power9" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="100%"
+                            android:textSize="111px"
+                            android:textColor="#FFFFFF"
+                            />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            android:paddingLeft="8dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="电量还剩"
-                                android:textColor="@color/white"
-                                android:textSize="29sp" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:paddingTop="5dp"
-                                    android:textColor="@color/white"
-                                    android:textSize="51sp" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:paddingTop="5dp"
-                                    android:text="%"
-                                    android:textColor="@color/white"
-                                    android:textSize="51sp"
-                                    android:visibility="gone" />
-                            </LinearLayout>
-
-                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -229,34 +202,48 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="234dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="15dp"
+                    android:layout_gravity="center_horizontal|center|center_vertical"
 
                     >
 
                     <RelativeLayout
-                        android:layout_width="2762dp"
-                        android:layout_height="523dp"
+                        android:layout_width="1404px"
+                        android:layout_height="529px"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="24dp"
-                        android:background="@mipmap/bg"
-                        android:gravity="center|center_horizontal">
+                        android:layout_centerHorizontal="true"
+                        android:background="@mipmap/kuang_bg"
+                        android:layout_gravity="center|center_horizontal"
+
+                        >
+
 
                         <ImageView
                             android:id="@+id/imageView3"
-                            android:layout_width="910dp"
-                            android:layout_height="335dp"
+                            android:layout_width="922px"
+                            android:layout_height="327px"
                             android:layout_centerInParent="true"
-                            android:layout_marginLeft="100dp"
-                            android:layout_marginRight="100dp"
                             android:background="@mipmap/dianchi" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="100%"
+                            android:textSize="111sp"
+                            android:textColor="#FFFFFF"
+
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"/>
 
                     </RelativeLayout>
 
@@ -266,81 +253,110 @@
 
             <!--** -->
 
-            <RelativeLayout
-                android:id="@+id/ll_right_bar1"
-                android:layout_width="290dp"
-                android:layout_height="1009dp"
-                android:layout_alignParentRight="true">
-                <RelativeLayout
-                    android:layout_width="290dp"
-                    android:layout_height="1009dp"
-                    android:layout_alignParentRight="true">
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="1009dp"
-                        android:layout_alignParentRight="true">
-                <ImageView
-                    android:id="@+id/imgViewBtnRight"
-                    android:layout_width="53dp"
-                    android:layout_height="49dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@mipmap/you_yc" />
-                <LinearLayout
-                    android:id="@+id/ll_right_bar"
-                    android:layout_width="234dp"
-                    android:layout_height="1009dp"
-                    android:layout_alignParentRight="true"
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/ll_right_bar1"-->
+                <!--android:layout_width="290dp"-->
+                <!--android:layout_height="1009dp"-->
+                <!--android:layout_alignParentRight="true">-->
+                <!--<RelativeLayout-->
+                    <!--android:layout_width="290dp"-->
+                    <!--android:layout_height="1009dp"-->
+                    <!--android:layout_alignParentRight="true">-->
+                    <!--<RelativeLayout-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="1009dp"-->
+                        <!--android:layout_alignParentRight="true">-->
 
-                    android:background="@mipmap/zuolan"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_Battery_Level"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:paddingTop="5dp"
-                        android:text="剩余100%电量"
-                        android:textColor="#E8E8E8"
-                        android:textSize="26sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:paddingTop="5dp"
-                        android:text="可运行10个小时"
-                        android:textColor="#E8E8E8"
-                        android:textSize="26sp" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/imgViewBtnRight"-->
+                    <!--android:layout_width="53dp"-->
+                    <!--android:layout_height="49dp"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:background="@mipmap/you_yc" />-->
 
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="7dp"
-                        android:background="@drawable/btn_background"
-                        android:clickable="true">
 
-                        <ImageView
-                            android:id="@+id/iv_Map1"
-                            android:layout_width="168dp"
-                            android:layout_height="70dp"
-                            android:layout_alignParentBottom="true"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="left"
-                            android:clickable="true"
-                            android:scaleType="fitXY"
-                            android:src="@mipmap/tuichu_no"
-                            android:visibility="visible" />
-                    </RelativeLayout>
+                <!--<LinearLayout-->
+                    <!--android:id="@+id/ll_right_bar"-->
+                    <!--android:layout_width="234dp"-->
+                    <!--android:layout_height="1009dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+
+                    <!--android:background="@mipmap/zuolan"-->
+                    <!--android:orientation="vertical">-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/tv_Battery_Level"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginLeft="10dp"-->
+                        <!--android:paddingTop="5dp"-->
+                        <!--android:text="剩余100%电量"-->
+                        <!--android:textColor="#E8E8E8"-->
+                        <!--android:textSize="26sp" />-->
+
+                    <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginLeft="10dp"-->
+                        <!--android:layout_marginTop="10dp"-->
+                        <!--android:paddingTop="5dp"-->
+                        <!--android:text="可运行10个小时"-->
+                        <!--android:textColor="#E8E8E8"-->
+                        <!--android:textSize="26sp" />-->
 
 
-                </LinearLayout>
-                    </RelativeLayout>
-                </RelativeLayout>
-            </RelativeLayout>
+                    <!--<RelativeLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_marginBottom="7dp"-->
+                        <!--android:background="@drawable/btn_background"-->
+                        <!--android:clickable="true">-->
+
+                        <!--<ImageView-->
+                            <!--android:id="@+id/iv_Map1"-->
+                            <!--android:layout_width="168dp"-->
+                            <!--android:layout_height="70dp"-->
+                            <!--android:layout_alignParentBottom="true"-->
+                            <!--android:layout_centerHorizontal="true"-->
+                            <!--android:layout_centerVertical="true"-->
+                            <!--android:layout_gravity="left"-->
+                            <!--android:clickable="true"-->
+                            <!--android:scaleType="fitXY"-->
+                            <!--android:src="@mipmap/tuichu_no"-->
+                            <!--android:visibility="visible" />-->
+                    <!--</RelativeLayout>-->
+
+
+                <!--</LinearLayout>-->
+                    <!--</RelativeLayout>-->
+                <!--</RelativeLayout>-->
+            <!--</RelativeLayout>-->
+
+            <!--<RelativeLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:orientation="vertical"-->
+                <!--&gt;-->
+
+
+
+<FrameLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+                <include layout="@layout/battery_rightbar"
+                    >
+
+                </include>
+</FrameLayout>
+
+
+
+            <!--</RelativeLayout>-->
+
+
 
         </RelativeLayout>
     </LinearLayout>
