--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -69,6 +69,7 @@
                 android:layout_width="232dp"
                 android:layout_alignParentRight="true"
                 android:orientation="horizontal"
+                android:background="@mipmap/bg"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
@@ -171,8 +172,9 @@
                     android:layout_height="wrap_content">
                     <ListView
                         android:id="@+id/plan_change_list"
+                        android:layout_marginTop="25px"
                         android:layout_width="match_parent"
-                        android:layout_height="600dp"
+                        android:layout_height="700px"
                         >
                     </ListView>
                     <Button
