--- a/HeadControl/app/src/main/res/layout/change_plan_adapter.xml
+++ b/HeadControl/app/src/main/res/layout/change_plan_adapter.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/black"
-            android:background="@mipmap/wenzikuang"
+            android:background="@mipmap/wenzikuangmap"
             />
         <ImageButton
             android:layout_marginLeft="5px"
