--- a/HeadControl/app/src/main/res/layout/custom_timepicker1.xml
+++ b/HeadControl/app/src/main/res/layout/custom_timepicker1.xml
@@ -14,61 +14,74 @@
 
     <LinearLayout
         android:id="@+id/ll_Dialog_Main"
-        android:layout_width="233dp"
-        android:layout_height="280dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView">
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <LinearLayout
             android:id="@+id/ll_Dialog_Top"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="52px"
             android:orientation="horizontal">
             <LinearLayout
                 android:id="@+id/ll_Dialog_Left"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
                 android:orientation="horizontal">
                 <!--开始-->
-                <com.jdrd.setting.common.MyTimerPicker1
+                <com.android.jdrd.headcontrol.common.MyTimerPicker1
                     android:id="@+id/mtp_Start_Hour1"
-                    android:layout_width="30dp"
-                    android:layout_height="60dp"/>
+                    android:layout_width="70px"
+                    android:layout_height="260px"
+                    />
                 <TextView
                     android:id="@+id/tv_start_Hour1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_toRightOf="@id/mtp_Start_Hour1"
+                    android:layout_marginLeft="5px"
+                    android:layout_marginRight="5px"
                     android:text="："
                     android:textColor="@color/white"
-                    android:textSize="10sp"
+                    android:textSize="47px"
                     android:textStyle="bold" />
 
-                <com.jdrd.setting.common.MyTimerPicker1
+                <com.android.jdrd.headcontrol.common.MyTimerPicker1
                     android:id="@+id/mtp_Start_Minute1"
-                    android:layout_width="30dp"
-                    android:layout_height="60dp"
+                    android:layout_width="70px"
+                    android:layout_height="260px"
                     android:layout_toRightOf="@id/tv_start_Hour1" />
 
             </LinearLayout>
+            <TextView
+                android:layout_width="50px"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:layout_marginRight="5px"
+                android:layout_marginLeft="5px"
+                android:textSize="50px"
+                android:text="-"
+                />
             <LinearLayout
                 android:id="@+id/ll_Dialog_Right"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <!--结束-->
-                <com.jdrd.setting.common.MyTimePicker
+                <com.android.jdrd.headcontrol.common.MyTimePicker
                     android:id="@+id/mtp_End_Hour1"
-                    android:layout_width="30dp"
-                    android:layout_height="60dp"
+                    android:layout_width="70px"
+                    android:layout_height="260px"
                     android:layout_toRightOf="@id/mtp_Start_Minute1"
-                    android:layout_marginRight="20dp"
                     />
                 <TextView
                     android:id="@+id/tv_End_Hour1"
@@ -77,14 +90,16 @@
                     android:layout_gravity="center"
                     android:layout_toRightOf="@id/mtp_End_Hour1"
                     android:text="："
+                    android:layout_marginLeft="10px"
+                    android:layout_marginRight="10px"
                     android:textColor="@color/white"
-                    android:textSize="10sp"
+                    android:textSize="47px"
                     android:textStyle="bold" />
 
-                <com.jdrd.setting.common.MyTimePicker
+                <com.android.jdrd.headcontrol.common.MyTimePicker
                     android:id="@+id/mtp_End_Minute1"
-                    android:layout_width="30dp"
-                    android:layout_height="60dp"
+                    android:layout_width="70px"
+                    android:layout_height="260px"
                     android:layout_toRightOf="@id/tv_End_Hour1" />
 
             </LinearLayout>
@@ -92,38 +107,46 @@
         <!--下面-->
         <LinearLayout
             android:id="@+id/ll_Dialog_Bottom"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:orientation="vertical">
+            android:layout_marginTop="50px"
+            android:paddingLeft="10px"
+            android:paddingRight="10px"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
             <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingRight="10px"
+                android:layout_weight="1"
+                >
                 <ImageView
                     android:id="@+id/iv_ImageView_queding_no"
-                    android:layout_width="194dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@mipmap/tk_queding_no"/>
                 <ImageView
                     android:id="@+id/iv_ImageView_queding_per"
-                    android:layout_width="194dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@mipmap/tk_queding_pre"
                     android:visibility="gone"/>
             </FrameLayout>
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp">
+                android:layout_weight="1"
+                android:paddingLeft="10px"
+                >
                 <ImageView
                     android:id="@+id/iv_ImageView_quxiao_no"
-                    android:layout_width="194dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@mipmap/tk_quxiao_no"/>
                 <ImageView
                     android:id="@+id/iv_ImageView_quxiao_per"
-                    android:layout_width="194dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@mipmap/tk_quxiao_pre"
                     android:visibility="gone"/>
             </FrameLayout>
