--- a/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -236,12 +236,11 @@
                             android:background="@mipmap/dianchi" />
 
                         <TextView
+                            android:id="@+id/tv_Battery_Level"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="100%"
                             android:textSize="111sp"
                             android:textColor="#FFFFFF"
-
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"/>
 
