--- a/HeadControl/app/src/main/res/layout/add_item_cleantime.xml
+++ b/HeadControl/app/src/main/res/layout/add_item_cleantime.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/ll_item_time"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="108px"
               android:orientation="vertical"
     >
 
@@ -11,7 +11,7 @@
         android:id="@+id/rr_time_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33px"
+        android:layout_marginBottom="33px"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:background="@mipmap/liebiaokuan"
