--- a/HeadControl/app/src/main/res/layout/fragment_clean.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_clean.xml
@@ -15,9 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="@mipmap/dingbu"
+            android:textColor="#E8E8E8"
             android:gravity="center"
             android:text="清洁"
-            android:textSize="15sp" />
+            android:textSize="15px" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
 
                         <LinearLayout
                             android:layout_width="1404px"
-                            android:layout_height="wrap_content"
+                            android:layout_height="550px"
                             android:layout_marginTop="25px"
                             android:layout_marginBottom="25px"
                             android:background="@mipmap/kuang_bg"
@@ -64,7 +65,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="40px"
+                                    android:layout_marginBottom="49px"
                                     android:layout_marginTop="40px"
                                     android:layout_marginLeft="20dp"
                                     android:text="清洁时间设置"
@@ -88,7 +89,6 @@
                                 android:id="@+id/sv_top"
                                 android:layout_width="wrap_content"
                                 android:layout_height="390px"
-                                android:background="@mipmap/zuolan"
                                 android:fadingEdge="none">
                                 <LinearLayout
                                     android:id="@+id/ll_addTimeLin"
