--- a/LaserRadar/HeadControl/app/src/main/res/layout/fragment_dialog_face.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/fragment_dialog_face.xml
@@ -2,11 +2,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/dialog_face">
     <ImageView
         android:id="@+id/image"
-        android:layout_width="1600dp"
-        android:layout_height="900dp"
+        android:layout_width="1900px"
+        android:scaleType="fitXY"
+        android:layout_height="980px"
         />
 </LinearLayout>
